Update the frontend

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="E-commerce site for Jesse A. Eisenbalm - Premium lip balm for humans"
+      content=" Discover Jesse A. Eisenbalm, the premium lip balm designed to keep you human in an AI-driven world. Stop. Breathe. Balm. Embrace your humanity and mortality with every application."
+      keywords="beeswax lip balm, premium lip balm, AI,  wellness, mindful skincare, AI slop"
+      
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/eisenbalm-2.png" />
     <!--
@@ -24,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Jesse A. Eisenbalm</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
